--- a/index.html
+++ b/index.html
@@ -1,95 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Barbour (BRBR)</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      text-align: center;
-    }
-    header {
-      padding: 60px 20px;
-      background: linear-gradient(135deg, #16a34a, #065f46);
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-    p {
-      max-width: 700px;
-      margin: 20px auto;
-      font-size: 1.1em;
-      line-height: 1.6;
-    }
-    .box {
-      background: #020617;
-      margin: 30px auto;
-      padding: 30px;
-      max-width: 800px;
-      border-radius: 12px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.4);
-    }
-    a {
-      color: #22c55e;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    footer {
-      margin-top: 60px;
-      padding: 20px;
-      font-size: 0.9em;
-      opacity: 0.7;
-    }
-  </style>
-</head>
+// === OFFICIAL BRBR LINKS ===
+const LINKS = {
+  pancakeswap: "https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1",
+  bscscan: "https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1",
+  linktree: "https://linktr.ee/BRBR"
+};
 
-<body>
+// Inject links
+document.getElementById("btnPancake").href = LINKS.pancakeswap;
+document.getElementById("btnBscscan").href = LINKS.bscscan;
+document.getElementById("btnLinktree").href = LINKS.linktree;
 
-<header>
-  <h1>Barbour (BRBR)</h1>
-  <p>A meme token born from a real story of bullying, resilience and self-belief.</p>
-</header>
+// Footer year
+document.getElementById("year").textContent = new Date().getFullYear();
 
-<div class="box">
-  <h2>The Story</h2>
-  <p>
-    Barbour is inspired by a true personal journey.  
-    A childhood marked by bullying, isolation and humiliation —  
-    transformed through discipline, education, resilience and self-confidence.
-  </p>
-  <p>
-    This project exists to remind people that your past does not define your future.
-  </p>
-</div>
+// Reveal animations
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) entry.target.classList.add("visible");
+  });
+});
+document.querySelectorAll(".reveal").forEach(el => observer.observe(el));
 
-<div class="box">
-  <h2>The Vision</h2>
-  <p>
-    BRBR is not about hype.  
-    It is about community, mental strength, and saying NO to harassment.
-  </p>
-  <p>
-    A symbol for those who stood up, survived, and kept moving forward.
-  </p>
-</div>
-
-<div class="box">
-  <h2>Links</h2>
-  <p>
-    📊 <a href="https://bscscan.com" target="_blank">BscScan</a><br/>
-    🥞 <a href="https://pancakeswap.finance" target="_blank">PancakeSwap</a><br/>
-    🔗 <a href="https://linktr.ee/barbourbrbr" target="_blank">Linktree</a>
-  </p>
-</div>
-
-<footer>
-  © 2026 Barbour (BRBR) — Community Driven
-</footer>
-
-</body>
-</html>
+// Modal logic
+const modal = document.getElementById("modal");
+document.getElementById("openModalBtn")?.addEventListener("click", () => modal.style.display = "flex");
+document.getElementById("closeModalBtn")?.addEventListener("click", () => modal.style.display = "none");
