--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <aside class="sidebar" id="sidebar">
       <div class="profileCard">
         <div class="profileCard__imgWrap">
-          <img src="assets/avatar.jpg" alt="BRBR profile avatar" class="profileCard__img">
+          <img src="avatar.jpg" alt="BRBR Founder" class="avatar">
           <div class="profileCard__ring"></div>
         </div>
         <div class="profileCard__name">Barbour (BRBR)</div>
