--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <!-- HERO WITH VIDEO BACKGROUND -->
 <header class="hero" id="top">
-  <video class="hero-video" autoplay muted loop playsinline preload="auto">
-    <source src="assets/hero.mp4" type="video/mp4">
-  </video>
+ <video class="hero-video" autoplay muted loop playsinline>
+  <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
+</video>
+
 
   <div class="hero-overlay"></div>
 
