--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
 
 <!-- HERO WITH VIDEO BACKGROUND -->
 <header class="hero" id="top">
- <video class="hero-video" autoplay muted loop playsinline>
- <source src="https://github.com/MorsiBoo/MorsiBoo.github.io/releases/download/v1.0/hero.mp4" type="video/mp4">
+  <video class="hero-video" autoplay muted loop playsinline preload="auto">
+    <source src="https://github.com/MorsiBoo/MorsiBoo.github.io/releases/download/v1.0/hero.mp4?raw=1" type="video/mp4">
+  </video>
+
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content">
+    <img class="avatar" src="avatar.jpg" alt="BRBR Avatar">
+    <h1>BARBOUR BRBR</h1>
+    <p>Global Youth. Global Hope.</p>
+
+    <div class="buttons">
+      <a class="btn primary" target="_blank"
+         href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1">
+        Buy on PancakeSwap
+      </a>
+
+      <a class="btn" target="_blank"
+         href="https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1#cards">
+        View on BscScan
+      </a>
+
+      <a class="btn" target="_blank" href="https://linktr.ee/barbourbrbr">
+        Linktree
+      </a>
+    </div>
+  </div>
+</header>
+
 
 
 
