--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <div class="hero-overlay"></div>
 
   <div class="hero-content">
-    <img class="avatar" src="avatar.jpg" alt="BRBR Avatar">
+    <video class="logo-video" autoplay muted loop playsinline>
+  <source src="logo.mp4" type="video/mp4">
+</video>
+
     <h1>BARBOUR BRBR</h1>
     <p>Global Youth. Global Hope.</p>
 
